fixed menu list items spacing, disabled scroll when menu is open

--- a/src/styling/header.css
+++ b/src/styling/header.css
@@ -1,7 +1,6 @@
 
 .header {
     background-color: rgb(0, 0, 0);
-    /* background-color: rgba(0, 0, 0, 0.95); */
     color: white;
     text-align: center;
     position: fixed;
@@ -24,14 +23,9 @@
 }
 
 .logo-container {
-    /* min-height: max(80%, 110px);
-    max-height: min(80%, 100px); */
-    /* height: 55%; */
-    /* width: min(90vw, 500px); */
     max-width: 90vw;
     min-width: 160px;
     max-height: 75%;
-    /* max-width: 500px; */
     margin: 0 auto;
 }
 
@@ -55,12 +49,10 @@
 .menu {
     height: 75%;
     position: fixed;
-    /* top: min(24vh, 160px); */
     top: var(--header-height);
     z-index: 1;
     left: 0;
     overflow-x: hidden;
-    /* transition: 0.25s; */
     background-color: transparent;
 }
 
@@ -84,13 +76,11 @@
 
 .left {
     left: 0;
-    /* background-color: pink; */
     clip-path: polygon(0% 0%, 90% 0%, 0% 100%, 0% 100%);
 }
 
 .right {
     right: 0;
-    /* background-color: blue; */
     clip-path: polygon(80% 0%, 100% 0%, 100% 100%, 0% 100%);
 }
 
@@ -104,7 +94,6 @@
     list-style: none;
     padding: 0;
     margin: 0;
-    /* animation: close; */
     transition: 0.5s;
     transition-delay: 0.35s;
     top: 5vh;
@@ -120,10 +109,9 @@
     z-index: 2;
 }
 
-/* @keyframes close {
-    from {width: 100%;}
-    to {width: 0%;}
-} */
+.menu li:not(:last-child) {
+    margin-bottom: min(3vh, 30px);
+}
 
 .menu a {
     text-decoration: none;
@@ -136,10 +124,6 @@
     color: rgb(255, 237, 0);
 }
 
-.menu li:not(:last-child) {
-    margin-bottom: 5vh;
-}
-
 @media screen and (max-width: 768px) {
     .header {
         height: var(--header-height-resp);
@@ -147,5 +131,9 @@
 
     .menu {
         top: var(--header-height-resp);
+    }
+
+    .menu li:not(:last-child) {
+        margin-bottom: 4vh;
     }
 }
